--- a/URX/URX/URX.csproj
+++ b/URX/URX/URX.csproj
@@ -44,6 +44,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="robotiq_two_finger_gripper.cs" />
     <Compile Include="urrobot.cs" />
+    <Compile Include="urrtmon.cs" />
+    <Compile Include="urscript.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
