transform class and many changes

--- a/URX/URX/URX.csproj
+++ b/URX/URX/URX.csproj
@@ -40,6 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="math3d\orientation.cs" />
+    <Compile Include="math3d\tranformation.cs" />
+    <Compile Include="math3d\utils.cs" />
+    <Compile Include="math3d\vector.cs" />
+    <Compile Include="transform.cs" />
     <Compile Include="robot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="robotiq_two_finger_gripper.cs" />
@@ -48,6 +53,7 @@
     <Compile Include="urscript.cs" />
     <Compile Include="ursecmon.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
