--- a/URX/URX/URX.csproj
+++ b/URX/URX/URX.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Logger.cs" />
     <Compile Include="math3d\orientation.cs" />
     <Compile Include="math3d\tranformation.cs" />
     <Compile Include="math3d\utils.cs" />
